name: anansi
version: 0.1
synopsis: Simple literate programming preprocessor
license: GPL-3
license-file: license.txt
author: John Millikin
maintainer: jmillikin@gmail.com
build-type: Simple
cabal-version: >=1.6
category: Development
stability: experimental
bug-reports: mailto:jmillikin@gmail.com
homepage: http://ianen.org/haskell/anansi/
tested-with: GHC==6.12.1

source-repository head
  type: darcs
  location: http://ianen.org/haskell/anansi/

library
  ghc-options: -Wall -fno-warn-unused-do-bind

  build-depends:
      base >=4.0 && < 5.0
    , parsec >= 3.0 && < 4
    , bytestring >= 0.9 && < 0.10
    , text >= 0.7 && < 0.8
    , transformers >= 0.2 && < 0.3
    , containers >= 0.1 && < 0.4
    , filepath >= 1.1 && < 1.2
    , directory >= 1.0 && < 1.1

  exposed-modules:
    Anansi
    Anansi.Loom.Debug
    Anansi.Loom.XHTML
    Anansi.Loom.LaTeX

  other-modules:
    Anansi.Loom
    Anansi.Parser
    Anansi.Tangle
    Anansi.Types
    Anansi.Util

executable anansi
  main-is: Main.hs
