name: anansi
version: 0.4
synopsis: Simple literate programming preprocessor
license: GPL-3
license-file: license.txt
author: John Millikin
maintainer: jmillikin@gmail.com
build-type: Simple
cabal-version: >= 1.8
category: Development
stability: experimental
bug-reports: mailto:jmillikin@gmail.com
homepage: https://john-millikin.com/software/anansi/
tested-with: GHC == 6.12.1

source-repository head
  type: bazaar
  location: https://john-millikin.com/software/anansi/

library
  hs-source-dirs: lib
  ghc-options: -Wall

  build-depends:
      base >= 4.0 && < 5.0
    , bytestring >= 0.9 && < 0.10
    , containers >= 0.1 && < 0.5
    , monads-tf >= 0.1 && < 0.2
    , parsec >= 3.0 && < 3.2
    , system-filepath >= 0.3.1 && < 0.5
    , system-fileio >= 0.2.1 && < 0.4
    , text >= 0.7 && < 0.12

  exposed-modules:
    Anansi

  other-modules:
    Anansi.Loom
    Anansi.Loom.Debug
    Anansi.Loom.HTML
    Anansi.Loom.LaTeX
    Anansi.Loom.NoWeb
    Anansi.Main
    Anansi.Parser
    Anansi.Tangle
    Anansi.Types
    Anansi.Util

executable anansi
  main-is: Main.hs
  hs-source-dirs: lib,src
  ghc-options: -Wall

  build-depends:
      base >= 4.0 && < 5.0
    , bytestring >= 0.9 && < 0.10
    , containers >= 0.1 && < 0.5
    , monads-tf >= 0.1 && < 0.2
    , parsec >= 3.0 && < 3.2
    , system-filepath >= 0.3.1 && < 0.5
    , system-fileio >= 0.2.1 && < 0.4
    , text >= 0.7 && < 0.12
